--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/02ea88b81a.js"></script>
 
@@ -47,9 +48,11 @@
           <!-- dropdown menu -->
           <div class="dropdown" data-toggle="dropdown"><a class="nav-item nav-link dropbtn" href="#"><i class="fas fa-globe"></i> English <i class="fas fa-chevron-down"></i></a>
             <div class="dropdown-content">
-              <a href="#">Spanish</a>
-              <a href="#">French</a>
+              <a href="#">Arabic</a>
               <a href="#">English</a>
+              <a href="#">French</a>
+              <a href="#">Mandarin Chinese</a>
+              <a href="#">Spanish</a>
             </div>
           </div>
           <a class="nav-item nav-link" id="search-icon" href="#"><i class="fas fa-search"></i></a>
@@ -76,6 +79,7 @@
               <p><span class="article-date">March 13, 2019 |</span> <a href="#" class="article-tag-links">Community</a>, <a href="#" class="article-tag-links">Company</a></p>
             </div>
           </div>
+
           <div class="hr-div">
             <hr class="below-main-hr">
           </div>
@@ -110,7 +114,7 @@
 
 
           <!-- sub hero / 3rd row / 3 columns -->
-          <div class="row row-three sub-hero">
+          <div class="row row-three sub-hero d-flex justify-content-between">
             <div class="col-lg-12 sub-hero-title">
               <ul class="nav nav-pills sub-hero-pills">
                 <li class="active"><a href="#" class="sub-hero-pill-links"><span class="all">All</span></a></li>
