--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="col-lg-12 col-sm-12">
               <h2 class="hero-title">Latest News</h2>
             </div>
-            <div class="hero-columns first-hero-column col-lg-6 col-md-6 col-sm-12">
+            <div class="first-hero-column col-lg-6 col-md-6 col-sm-12">
               <div class="">
                 <img class="orange-pic" src="images/duy-pham-oranges-unsplash.jpg" alt="Photo of oranges by Duy Pham from Unsplash" class="img-responsive">
                   <div class="hero-subtitle below-oranges">
@@ -95,7 +95,7 @@
                   </div>
               </div>
             </div>
-            <div class="hero-columns second-hero-column col-lg-6 col-md-6 col-sm-12">
+            <div class="second-hero-column col-lg-6 col-md-6 col-sm-12">
               <div class="">
                 <img src="images/mike-kenneally-coffee-unsplash.jpg" alt="Photo of a white ceramic mug and saucer with coffee beans on brown textile by Mike Kenneally on Unsplash" class="img-responsive">
                   <div class="hero-subtitle">
