update sub article group heading

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <div class="sub-article-group">
                 <img src="images/ramon-salinero-orb-unsplash1.jpg" alt="A photo of human hand holding plasma ball by Ramon Salinero on Unsplash" class="img-responsive">
                 <div class="">
-                  <h3 class="mobile-third-heading">How Much Power is Too Much</h3>
+                  <h3 class="mobile-third-heading">No One Bulb Should Have All That Power</h3>
                   <p class="mobile-paragraph">In nec tincidunt odio. Nullam metus ex, ultricies eu finibus ut, viverra ornare lorem. Ut at scelerisque justo.</p>
                   <p class="mobile-paragraph"><span class="article-date">May 30, 2019 | </span><a href="#" class="article-tag-links">Technology</a></p>
                 </div>
